--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ethers": "^6.3.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   }
 }
